fixes more alignment issues on IE and Edge

--- a/src/scss/events.scss
+++ b/src/scss/events.scss
@@ -21,7 +21,6 @@
 	&--small {
 		flex-basis: 33.33%;
 		flex-grow: 1;
-		max-width: 640px;
 		padding: 0 $pad 2*$pad;
 
 		img {
