--- a/src/scss/grid.scss
+++ b/src/scss/grid.scss
@@ -31,6 +31,8 @@ $brk--large-desktop: 1920px;
 		justify-content: center;
 		align-items: flex-start;
 		padding: 2*$pad $pad;
+		max-width: 960px;
+		margin: 0 auto;
 
 		p, img {
 			width: 100%;
